Moves filter bar into it's own component, places it in main.cljs, fixes double scroll bar issues

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -157,9 +157,8 @@ mark.white {
 }
 
 .content {
-  padding-top: 74px;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: visible;
 }
 
 .outer-height-wrap, .inner-height-wrap {
